--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 <div id="loginModal" class="modal">
     <div class="modal-content">
         <h3>You need to log in or create an account to continue</h3>
-        <a href="https://xriser200.github.io/null/">Login</a>
-        <a href="https://xriser200.github.io/null/">Create Account</a>
+        <a href="https://yokleaks.github.io/login/">Login</a>
+        <a href="https://yokleaks.github.io/register/">Create Account</a>
     </div>
 </div>
 
